--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT",
@@ -12,6 +12,7 @@
     "puppeteer": "^22.9.0"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "typescript": "^5.4.5"
   }
 }
